fix: remove overflow hidden

--- a/webapp/src/components/Footer/Footer.css
+++ b/webapp/src/components/Footer/Footer.css
@@ -5,7 +5,6 @@
   background-color: black;
   display: flex;
   flex-flow: row;
-  overflow: hidden;
 }
 
 .Footer .social-icons a {
